# echocounter

./: CMakeLists.txt
src/: CMakeLists.txt  main.c  test.c  test.h
test/: CMakeLists.txt  test_copy_hello.c
